force-app/main/default/objects/Location__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Enter landmark</description>
    <inlineHelpText>Please enter landmark</inlineHelpText>
    <label>Landmark</label>
    <length>50</length>
    <type>Text</type>
</CustomField>