force-app/main/default/objects/Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Write Street name</description>
    <inlineHelpText>Please Write street name</inlineHelpText>
    <label>Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>